force-app/main/default/objects/ES_Project__c/fields/Start_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Fiscal_Year__c</fullName>
    <formula>If($CustomMetadata.ES_Setting__mdt.Default.Start_Month_of_Fiscal_Year__c!=1 &amp;&amp; Month(Kickoff_formula__c)&gt;=$CustomMetadata.ES_Setting__mdt.Default.Start_Month_of_Fiscal_Year__c,
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(Kickoff_formula__c) +1),2),
&apos;FY&apos;&amp;RIGHT(TEXT(YEAR(Kickoff_formula__c)),2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Fiscal Year</label>
    <type>Text</type>
</CustomField>