force-app/main/default/objects/ES_Project__c/fields/Sum_of_Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Task_Duration__c</fullName>
    <label>Sum of Task Duration</label>
    <summarizedField>ES_Phase__c.Sum_Task_Duration__c</summarizedField>
    <summaryForeignKey>ES_Phase__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>